--- a/operatorHomePage.html
+++ b/operatorHomePage.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="img/fuel-pump.svg">
-    <link rel="stylesheet" href="heder.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
 <header class="bg-primary p-3 mb-3 border-bottom">
@@ -63,8 +63,8 @@
 
     </div>
 </div>
-<script src="./hederName.js"></script>
-<script src="./adminHome.js"></script>
+<script src="headerName.js"></script>
+<script src="homePageName.js"></script>
 </body>
 
 </html>
