--- a/operatorSalePage.html
+++ b/operatorSalePage.html
@@ -1,167 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sale</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/png" href="img/fuel-pump.svg">
-    <link rel="stylesheet" href="heder.css">
-</head>
-<body>
-<header class="bg-primary p-3 mb-3 border-bottom">
-    <div class="container-fluid">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li class="nav-item">
-                    <a href="#" class="nav-link link-light fw-bold px-2">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="operatorSalePage.html" class="nav-link link-light px-2">Sale</a>
-                </li>
-            </ul>
-            <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
-            </div>
-            <div class="dropdown text-end">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
-<div class="alert alert-danger alert-dismissible fade show"  id='errorMsg' role="alert" style = "display: none">
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12 col-md-4">
-            <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
-                <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">Sales List</span>
-                </div>
-                <div id="saleList" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
-
+    <head>
+        <meta charset="UTF-8">
+        <title>Sale</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/png" href="img/fuel-pump.svg">
+        <link rel="stylesheet" href="header.css">
+    </head>
+    <body>
+        <header class="bg-primary p-3 mb-3 border-bottom">
+            <div class="container-fluid">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li class="nav-item">
+                            <a href="operatorHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="operatorProductPage.html" class="nav-link link-light px-2">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="operatorSalePage.html" class="nav-link link-light px-2">Sale</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="operatorLoyaltyCardPage.html" class="nav-link link-light px-2">Loyalty Card</a>
+                        </li>
+                    </ul>
+                    <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white">
+                    </div>
+                    <div class="dropdown text-end">
+                        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="profilepic.jpg" alt="user" width="32" height="32" class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu text-small" style="">
+                            <li><a class="dropdown-item" href="login.html">Sign out</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </header>
+        <div class="alert alert-danger alert-dismissible fade show"  id='errorMsg' role="alert" style = "display: none">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
 
-        <div class="mt-3 mb-3 col-sm-12 col-md-8">
-            <div class="btn-group" role="group" aria-label="Basic outlined example">
-                <button type="button" id="create" class="btn btn-outline-primary">Create</button>
-                <button type="button" id="update" class="btn btn-outline-primary">Update</button>
-                <button type="button" id="delete" class="btn btn-outline-primary">Delete</button>
-            </div>
-
-
-            <div class="mt-3 container">
-                <h4 class="mb-3">Sale</h4>
-                <form class="needs-validation">
-
-                    <div class="row g-3">
-                        <div class="col-sm-12">
-                            <label for="sale-id" class="form-label">№</label>
-                            <input type="text" class="form-control" id="sale-id" name="sale-id" required="" disabled>
-                            <div class="invalid-feedback"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-4">
+                    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
+                        <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+                            <span class="fs-5 fw-semibold">Sales List</span>
                         </div>
+                        <div id="saleList" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;">
 
-                        <div class="col-12">
-                            <label for="date" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="date" name="date" required="" disabled>
-                            <div class="invalid-feedback"></div>
                         </div>
+                    </div>
+                </div>
 
-                        <div class="col-md-12">
-                            <label for="customer" class="form-label">Customer</label>
-                            <select class="form-select" id="customer" name="customer" required="" disabled>
-                                <option value="">Choose...</option>
-                            </select>
-                            <div class="invalid-feedback"></div>
-                        </div>
+                <div class="mt-3 mb-3 col-sm-12 col-md-8">
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button type="button" id="create" class="btn btn-outline-primary">Create</button>
+                        <button type="button" id="update" class="btn btn-outline-primary">Update</button>
+                        <button type="button" id="delete" class="btn btn-outline-primary">Delete</button>
+                    </div>
 
-                        <div class="col-12">
-                            <label for="total-amount" class="form-label">Total Amount</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" id="total-amount" name="total-amount" required="" disabled>
-                                <span class="input-group-text rounded-end">€</span>
+
+                    <div class="mt-3 container">
+                        <h4 class="mb-3">Sale</h4>
+                        <form class="needs-validation">
+
+                            <div class="row g-3">
+                                <div class="col-sm-12">
+                                    <label for="sale-id" class="form-label">№</label>
+                                    <input type="text" class="form-control" id="sale-id" name="sale-id" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="date" class="form-label">Date</label>
+                                    <input type="date" class="form-control" id="date" name="date" required="" disabled>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-md-12">
+                                    <label for="customer" class="form-label">Customer</label>
+                                    <select class="form-select" id="customer" name="customer" required="" disabled>
+                                        <option value="">Choose...</option>
+                                    </select>
+                                    <div class="invalid-feedback"></div>
+                                </div>
+
+                                <div class="col-12">
+                                    <label for="total-amount" class="form-label">Total Amount</label>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" id="total-amount" name="total-amount" required="" disabled>
+                                        <span class="input-group-text rounded-end">€</span>
+                                        <div class="invalid-feedback"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr class="my-4">
+
+
+                            <h4 class="mb-3">Item</h4>
+
+                            <div id="itemList" class="row g-3">
+
+
+
+
+
+
+                                <div id="addCard" class="card m-3" style="display : none; width: 18rem; height: 294.400px">
+                                    <div class="d-flex justify-content-center align-items-center card-body h-100">
+                                        <img class="mb-4" src="img/plus-circle.svg" alt="" width="100" height="100">
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+
+
+
+
+                            <hr class="my-4">
+
+
+                            <h4 class="mb-3">Movement Card</h4>
+
+
+                            <div class="col-12">
+                                <label for="card-id" class="form-label">Card №</label>
+                                <input type="text" class="form-control" id="card-id" name="card-id" disabled>
                                 <div class="invalid-feedback"></div>
                             </div>
-                        </div>
-                    </div>
 
-                    <hr class="my-4">
-
-
-                    <h4 class="mb-3">Item</h4>
-
-                    <div id="itemList" class="row g-3">
-
-
-
-
-
-
-                        <div id="addCard" class="card m-3" style="display : none; width: 18rem; height: 294.400px">
-                            <div class="d-flex justify-content-center align-items-center card-body h-100">
-                                <img class="mb-4" src="img/plus-circle.svg" alt="" width="100" height="100">
+                            <div class="col-12">
+                                <label for="loyalty-program" class="form-label">Loyalty Program</label>
+                                <input type="text" class="form-control" id="loyalty-program" name="loyalty-program" disabled>
+                                <div class="invalid-feedback"></div>
                             </div>
-                        </div>
+
+                            <div class="col-12">
+                                <label for="point-qty" class="form-label">Point Qty</label>
+                                <input type="text" class="form-control" id="point-qty" name="point-qty" disabled>
+                                <div class="invalid-feedback"></div>
+                            </div>
+
+                            <div class="col-md-12">
+                                <label for="prize" class="form-label">Prize</label>
+                                <select class="form-select" id="prize" name="prize" disabled>
+                                    <option value="">Choose...</option>
+                                </select>
+                                <div class="invalid-feedback"></div>
+                            </div>
+
+                            <hr class="my-4">
+
+
+
+
+
+                        </form>
                     </div>
-
-
-
-
-
-
-
-                    <hr class="my-4">
-
-
-                    <h4 class="mb-3">Movement Card</h4>
-
-
-                    <div class="col-12">
-                        <label for="card-id" class="form-label">Card №</label>
-                        <input type="text" class="form-control" id="card-id" name="card-id" disabled>
-                        <div class="invalid-feedback"></div>
-                    </div>
-
-                    <div class="col-12">
-                        <label for="loyalty-program" class="form-label">Loyalty Program</label>
-                        <input type="text" class="form-control" id="loyalty-program" name="loyalty-program" disabled>
-                        <div class="invalid-feedback"></div>
-                    </div>
-
-                    <div class="col-12">
-                        <label for="point-qty" class="form-label">Point Qty</label>
-                        <input type="text" class="form-control" id="point-qty" name="point-qty" disabled>
-                        <div class="invalid-feedback"></div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <label for="prize" class="form-label">Prize</label>
-                        <select class="form-select" id="prize" name="prize" disabled>
-                            <option value="">Choose...</option>
-                        </select>
-                        <div class="invalid-feedback"></div>
-                    </div>
-
-                    <hr class="my-4">
-
-
-
-
-
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<script src="operatorSale.js"></script>
-<script src="hederName.js"></script>
-</body>
+        <script src="operatorSale.js"></script>
+        <script src="headerName.js"></script>
+    </body>
 </html>
