--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" type="image/png" href="img/fuel-pump.svg">
-    <link rel="stylesheet" href="heder.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
 <header class="bg-primary p-3 mb-3 border-bottom">
@@ -77,6 +77,6 @@
 </div>
 
 <script src="service.js"></script>
-<script src="hederName.js"></script>
+<script src="headerName.js"></script>
 </body>
 </html>
