--- a/operatorLoyaltyCardPage.html
+++ b/operatorLoyaltyCardPage.html
@@ -2,9 +2,89 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Loyalty Card</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="img/fuel-pump.svg">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
+<header class="bg-primary p-3 mb-3 border-bottom">
+    <div class="container-fluid">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li class="nav-item">
+                    <a href="operatorHomePage.html" class="nav-link link-light fw-bold px-2">Home</a></li>
+                <li class="nav-item">
+                    <a href="operatorProductPage.html" class="nav-link link-light px-2">Products</a></li>
+                <li class="nav-item">
+                    <a href="operatorSalePage.html" class="nav-link link-light px-2">Sale</a></li>
+                <li class="nav-item">
+                    <a href="operatorLoyaltyCardPage.html" class="nav-link link-light px-2">Loyalty Card</a></li>
+            </ul>
+            <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white"></div>
+            <div class="dropdown text-end">
+                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="img/person-circle.svg" alt="mdo" width="32" height="32" class="rounded-circle">
+                </a>
+                <ul class="dropdown-menu text-small">
+                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
 
+<div class="alert alert-danger alert-dismissible fade show" id="errorMsg" role="alert" style="display: none">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+<div class="row">
+    <div class="col-sm-12 col-md-4">
+        <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
+            <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+                <span class="fs-5 fw-semibold">ID Customer</span>
+            </div>
+            <div id="loyaltyCardlist" class="list-group list-group-flush border-bottom" style="max-height: 79vh; overflow-y: auto;"></div>
+        </div>
+    </div>
+
+    <div class="mt-3 mb-3 col-sm-12 col-md-8">
+        <div class="btn-group mb-3" role="group" aria-label="Basic outlined example">
+            <button type="button" id="create" class="btn btn-outline-primary">Create</button>
+            <button type="button" id="update" class="btn btn-outline-primary">Update</button>
+            <button type="button" id="delete" class="btn btn-outline-primary">Delete</button>
+        </div>
+
+        <div class="container-fluid">
+            <div class="mt-3 container">
+                <h4 class="mb-3">Loyalty Card</h4>
+                <form class="needs-validation">
+                    <div class="row g-3">
+                        <div class="col-sm-12">
+                            <label for="loyaltyCardID" class="form-label">ID</label>
+                            <input type="text" class="form-control" id="loyaltyCardID" name="loyaltyCardID" required disabled>
+                            <div class="invalid-feedback"></div>
+                        </div>
+
+                        <div class="col-sm-12">
+                            <label for="customerID" class="form-label">Customer</label>
+                            <input type="number" class="form-control" id="customerID" name="customer" required disabled>
+                            <div class="invalid-feedback"></div>
+                        </div>
+
+                        <div class="col-12">
+                            <label for="point" class="form-label">Points</label>
+                            <input type="number" class="form-control" id="point" name="point" required disabled>
+                            <div class="invalid-feedback"></div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="product.js"></script>
+<script src="headerName.js"></script>
 </body>
 </html>
