--- a/scheduleService.html
+++ b/scheduleService.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>User</title>
+  <title>Schedule Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="icon" type="image/png" href="img/fuel-pump.svg">
@@ -61,32 +61,99 @@
               <label for="dt" class="form-label">Date</label>
               <input type="date" class="form-control" id="dt" disabled>
             </div>
-            <div class="col-sm-12">
-              <label for="serv" class="form-label">Service</label>
-              <input type="text" class="form-control" id="serv" disabled>
+<!--            <div class="col-sm-12">-->
+<!--              <label for="serv" class="form-label">Service</label>-->
+<!--              <input type="text" class="form-control" id="serv" disabled>-->
+<!--            </div>-->
+            <div class="mb-3">
+              <label for="serv">Service</label>
+              <select class="form-select" id="serv" name="service" disabled>
+                <option selected>Select Service</option>
+                <option value=""></option>
+              </select>
+              <div class="invalid-feedback"></div>
             </div>
+
             <div class="col-sm-12">
               <label for="dst" class="form-label">Description</label>
               <input type="text" class="form-control" id="dst" disabled>
             </div>
-            <div class="col-sm-12">
-              <label for="cst" class="form-label">Customer</label>
-              <input type="text" class="form-control" id="cst" disabled>
+<!--            <div class="col-sm-12">-->
+<!--              <label for="cst" class="form-label">Customer</label>-->
+<!--              <input type="text" class="form-control" id="cst" disabled>-->
+<!--            </div>-->
+
+<!--            <div class="mb-3">-->
+<!--              <label for="cst">Customer</label>-->
+<!--              <select class="form-select" id="cst" name="customer" disabled>-->
+<!--                <option selected>Select</option>-->
+<!--                <option value=""></option>-->
+<!--              </select>-->
+<!--            </div>-->
+
+            <div class="mb-3">
+              <label for="cst">Customer</label>
+              <select class="form-select" id="cst" name="customer" disabled>
+                <option selected>select</option>
+                <option value=""></option>
+              </select>
+              <div class="invalid-feedback"></div>
             </div>
-            <div class="col-sm-12">
-              <label for="status" class="form-label">Status</label>
-              <input type="text" class="form-control" id="status" disabled>
+
+
+            <!--   <div class="col-sm-12">-->
+<!--              <label for="status" class="form-label">Status</label>-->
+<!--              <input type="text" class="form-control" id="status" disabled>-->
+<!--            </div>-->
+
+            <div class="mb-3">
+              <label for="status">Status</label>
+              <select class="form-select" id="status" name="status" disabled>
+                <option selected>Select Status</option>
+                <option value="yes">Scheduled</option>
+                <option value="no">Unscheduled</option>
+              </select>
+              <div class="invalid-feedback"></div>
             </div>
-            <div class="col-sm-12">
-              <label for="es" class="form-label">Employee Service</label>
-              <input type="text" class="form-control" id="es" name="emp_ser" required disabled>
-              <div class="invalid-feedback"></div></div>
+
+<!--            <div class="col-sm-12">-->
+<!--              <label for="es" class="form-label">Employee Service</label>-->
+<!--              <input type="text" class="form-control" id="es" name="emp_ser" required disabled>-->
+<!--              <div class="invalid-feedback"></div></div>-->
+
+            <div class="mb-3">
+              <label for="es">Employee Service</label>
+              <select class="form-select" id="es" name="emp_ser" required disabled>
+                <option selected>select</option>
+                <option value=""></option>
+              </select>
+              <div class="invalid-feedback"></div>
+            </div>
+
             <div class="col-sm-12">
               <label for="mt" class="form-label">Material</label>
               <input type="text" class="form-control" id="mt" name="material" required disabled>
               <div class="invalid-feedback"></div></div>
           </div>
         </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Success Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="successModalLabel">Success</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Schedule updated successfully!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
       </div>
     </div>
   </div>
