--- a/movementCard.html
+++ b/movementCard.html
@@ -1,69 +1,78 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Movement Card</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon" type="image/png" href="img/fuel-pump.svg">
-    <link rel="stylesheet" href="header.css">
-</head>
-<body>
-<header class="bg-primary p-3 mb-3 border-bottom">
-    <div class="container-fluid">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li class="nav-item"><a href="customerHome.html" class="nav-link link-light fw-bold px-2">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link link-light px-2">Movement Card</a></li>
-                <li class="nav-item"><a href="customerScheduleService.html" class="nav-link link-light px-2">Schedule Service </a></li>
+    <head>
+        <meta charset="UTF-8">
+        <title>Movement Card</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="icon" type="image/png" href="img/fuel-pump.svg">
+        <link rel="stylesheet" href="header.css">
+    </head>
+    <body>
+        <header class="bg-primary p-3 mb-3 border-bottom">
+            <div class="container-fluid">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                        <li class="nav-item"><a href="customerHome.html" class="nav-link link-light fw-bold px-2">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link link-light px-2">Movement Card</a></li>
+                        <li class="nav-item"><a href="customerScheduleService.html" class="nav-link link-light px-2">Schedule Service </a></li>
 
-            </ul>
-            <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white"></div>
-            <div class="dropdown text-end">
-                <a href="#" class="d-block text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown">
-                    <img src="img/person-circle.svg" alt="user" width="32" height="32" class="rounded-circle">
-                </a>
-                <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="login.html">Sign out</a></li>
-                </ul>
+                    </ul>
+                    <div id="userName" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-white"></div>
+                    <div class="dropdown text-end">
+                        <a href="#" class="d-block text-decoration-none dropdown-toggle" style="filter: invert(1)" data-bs-toggle="dropdown">
+                            <img src="img/person-circle.svg" alt="user" width="32" height="32" class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu text-small">
+                            <li><a class="dropdown-item" href="login.html">Sign out</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</header>
+        </header>
 
-<div class="alert alert-danger alert-dismissible fade show" id='errorMsg' role="alert" style="display: none">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-</div>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-    </tr>
-    </tbody>
-</table>
-<script src=""></script>
-<script src="headerName.js"></script>
-</body>
+        <div class="alert alert-info alert-dismissible fade show" role="alert"  id='alertMsg' style="display: none">
+            <p class="m-0" id="alertMsgText"></p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+
+        <div class="ms-3 me-3 d-none" id="table-container">
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Movement Card ID</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Points Quantity</th>
+                    <th scope="col">Customer</th>
+                    <th scope="col">Loyalty Card</th>
+                    <th scope="col">Prize</th>
+                    <th scope="col">Loyalty Program</th>
+                    <th scope="col">Sale</th>
+                </tr>
+                </thead>
+                <tbody id="table-body">
+<!--                <tr>-->
+<!--                    <th scope="row">1</th>-->
+<!--                    <td>Mark</td>-->
+<!--                    <td>Otto</td>-->
+<!--                    <td>@mdo</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <th scope="row">2</th>-->
+<!--                    <td>Jacob</td>-->
+<!--                    <td>Thornton</td>-->
+<!--                    <td>@fat</td>-->
+<!--                </tr>-->
+<!--                <tr>-->
+<!--                    <th scope="row">3</th>-->
+<!--                    <td colspan="2">Larry the Bird</td>-->
+<!--                    <td>@twitter</td>-->
+<!--                </tr>-->
+                </tbody>
+            </table>
+        </div>
+        <script src="movementCard.js"></script>
+        <script src="headerName.js"></script>
+    </body>
 </html>
