--- a/pumpStationManagement.html
+++ b/pumpStationManagement.html
@@ -15,7 +15,7 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li class="nav-item">
-                    <a href="operatorHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
+                    <a href="stationManagementHomePage.html" class="nav-link link-light fw-bold px-2">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="pumpStationManagement.html" class="nav-link link-light px-2">Pump Management</a>
@@ -51,46 +51,48 @@
             </div>
         </div>
 
+
         <div class="mt-3 mb-3 col-sm-12 col-md-8">
+            <!--
             <div class="btn-group" role="group" aria-label="Basic outlined example">
                 <button type="button" id="create" class="btn btn-outline-primary" disabled>Create</button>
                 <button type="button" id="update" class="btn btn-outline-primary">Update</button>
                 <button type="button" id="delete" class="btn btn-outline-primary" disabled>Delete</button>
             </div>
+            -->
+                   <div class="mb-3">
+                       <label class="form-label">Fuel Level</label>
+                       <div class="progress">
+                           <div class="progress-bar bg-success" id="fuelLevel" role="progressbar" style="width: 42%;">42%</div>
+                       </div>
+                   </div>
 
+        <!-- <div class="mb-3">
+             <label for="fuelLevelInput" class="form-label">Adjust Fuel Level (%)</label>
+             <input type="number" id="fuelLevelInput" class="form-control" min="0" max="100">
+         </div>
+-->
+         <div class="mb-3">
+             <label for="fuelType" class="form-label">Fuel Type</label>
+             <select id="fuelType" class="form-select">
+                 <option value="Diesel">Diesel</option>
+                 <option value="Petrol">Petrol</option>
+                 <option value="Electric">Electric</option>
+             </select>
+         </div>
 
-            <div class="mb-3">
-                <label class="form-label">Fuel Level</label>
-                <div class="progress">
-                    <div class="progress-bar bg-success" id="fuelLevel" role="progressbar" style="width: 42%;">42%</div>
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <label for="fuelLevelInput" class="form-label">Adjust Fuel Level (%)</label>
-                <input type="number" id="fuelLevelInput" class="form-control" min="0" max="100">
-            </div>
-
-            <div class="mb-3">
-                <label for="fuelType" class="form-label">Fuel Type</label>
-                <select id="fuelType" class="form-select">
-                    <option value="Diesel">Diesel</option>
-                    <option value="Petrol">Petrol</option>
-                    <option value="Electric">Electric</option>
-                </select>
-            </div>
-
-            <div class="mb-3">
-                <label for="status" class="form-label">Status</label>
-                <select id="status" class="form-select">
-                    <option value="Active">Active</option>
-                    <option value="Inactive">Inactive</option>
-                    <option value="Maintenance">Maintenance</option>
-                </select>
-            </div>
-        </div>
-    </div>
+         <div class="mb-3">
+             <label for="status" class="form-label">Status</label>
+             <select id="status" class="form-select">
+                 <option value="Active">Active</option>
+                 <option value="Inactive">Inactive</option>
+                 <option value="Maintenance">Maintenance</option>
+             </select>
+         </div>
+     </div>
+ </div>
 </div>
-
+<script src="pump.js"></script>
+<script src="headerName.js"></script>
 </body>
 </html>
